--- a/test.html
+++ b/test.html
@@ -59,7 +59,7 @@
         
         .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
              border: none; 
-            background: url('test/images/u8428.png');
+            background: url('test/images/_noOveru8428.png');
             font-weight: normal;
             color: #454545;
             cursor: pointer;
